<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FB8C00"
    android:backgroundTint="#FB8C00"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText4"
        android:layout_width="184dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="188dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#43A047"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textPersonName"
        android:text="@string/eraser"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="184dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="188dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#7CB342"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="184dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="128dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#43A047"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textPersonName"
        android:text="@string/pencil"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="184dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="128dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#7CB342"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnCamera2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/detect"
        android:textColor="#ffd3ffe5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/capture"
        android:textColor="#ffd3ffe5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/capturedImage"
        android:layout_width="384dp"
        android:layout_height="307dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="67dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <EditText
        android:id="@+id/editText"
        android:layout_width="185dp"
        android:layout_height="53dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="68dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#43A047"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textPersonName"
        android:text="@string/pen"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="185dp"
        android:layout_height="53dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="68dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#7CB342"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="184dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#43A047"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textPersonName"
        android:text="@string/sharpner"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="184dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="#7CB342"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>